--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/icon.png" /> -->
-    <link rel="icon"
-    href="%PUBLIC_URL%/icon-surf-compact-filled.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- <title>Rarity Surf</title> -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Check rarity ranks for NFT's from your favorite collections."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/icon.png" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/icon-surf-compact-filled.png" />
+    <meta property="og:title" content="Rarity Surf" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/icon-surf-compact-filled.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon-surf-compact-filled.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +29,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Rarity Check</title>
   </head>
   <body class='flex items-center h-screen'>
     <noscript>You need to enable JavaScript to run this app.</noscript>
